<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/close_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/ic_close_24px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:paddingLeft="30dp"
            android:paddingTop="21dp"
            android:paddingRight="30dp"
            android:text="@string/layout_notification_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/bodyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/roboto"
            android:paddingLeft="29dp"
            android:paddingRight="29dp"
            android:text="@string/layout_notification_body"
            android:textAlignment="center"
            android:textColor="#BF212121"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:text="@string/im_agree"
            style="@style/text_l_white"
            android:padding="10dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/shape_serie_add_and_clean_btns"
             />

    </LinearLayout>
</ScrollView>