<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_img"
        android:scaleType="centerCrop"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C2D9D9D9" />
</RelativeLayout>


    <FrameLayout
        android:id="@+id/calendBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_calendbar"
        android:padding="10dp"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="@color/home_high_purple"
            android:contentDescription="@string/talkback_day_before_btn"
            android:padding="15dp"
            android:src="@drawable/ic_action_left" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dayOfWeek"
                style="@style/CalendarHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lun."
                android:textAlignment="center" />

            <TextView
                android:id="@+id/dateName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/CalendarHeader"
                android:text=" 23 Abril"
                android:textAlignment="center"
                />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/home_high_purple"
            android:contentDescription="@string/talkback_day_after_btn"
            android:padding="15dp"
            android:src="@drawable/ic_action_right" />
    </FrameLayout>

    <TextView
        android:id="@+id/empty_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/calendBar"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/calendBar"
        app:layout_constraintEnd_toEndOf="@id/calendBar"
        android:textSize="23sp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="#6C6767"
        android:lineSpacingExtra="7dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/empty_txt_home"
        android:textAppearance="@font/montserrat_medium"
        />

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendBar">

        <LinearLayout
            android:id="@+id/parent_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendBar">

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPanel"
        android:background="@drawable/corner_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:minHeight="56dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_medium"
        android:textAlignment="center"
        android:text="@string/add_training"
        android:paddingEnd="40dp"
        android:paddingStart="20dp"
        android:drawableStart="@drawable/add_symbol"
        android:drawablePadding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>